align fix

--- a/style/style.css
+++ b/style/style.css
@@ -89,6 +89,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 57px;
+    column-gap: 10px;
 }
 
 .particular-skills {
@@ -96,10 +97,12 @@
 }
 
 .particular-skills img,
-h1,
-h3 {
+h2,
+h4 {
     margin-top: 16px;
 }
+
+.particular-skills h1 {}
 
 /* extra section learn style  */
 .extra-learn-section {
@@ -151,8 +154,6 @@ h3 {
 
 /* call now section  */
 .call-now {
-    /* background: linear-gradient(#e66465, #8c8facd0); */
-    /* background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%); */
     max-width: 1140px;
     margin: 0 auto;
     background-image: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%), url(../images/watch.png);
